--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h4>Subheading</h4>
         <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         
-        
+        <img src="ChessBattleAdvanced.png" alt="ChessBattleAdvanced"> 
       </div>
     </div>
 
